tests/typing2/bad/testfile-borrow-4.rs

fn main() {
    let mut x = 3;
    let z = &x;
    let y = &mut x;
    z;
}
